Derive bilocal influence functional, extract HMF series, diagonalise Matsubara modes, and add closed-form qubit results.

--- a/literature/references_new.bib
+++ b/literature/references_new.bib
@@ -1100,3 +1100,52 @@
   eprint        = {1501.02506},
   archiveprefix = {arXiv}
 }
+
+@book{weissQuantumDissipativeSystems2012,
+  title     = {Quantum Dissipative Systems},
+  author    = {Weiss, Ulrich},
+  year      = {2012},
+  edition   = {4th},
+  publisher = {World Scientific},
+  address   = {Singapore},
+  isbn      = {978-981-4374-91-0}
+}
+@article{mccaulPartitionFreeApproach2018,
+  title={Partition-free approach to open quantum systems in harmonic environments: An exact stochastic Liouville equation},
+  author={McCaul, G. L. J. and Lorenz, C. D. and Kantorovich, L.},
+  journal={Phys. Rev. A},
+  volume={97},
+  pages={062122},
+  year={2018},
+  publisher={APS}
+}
+
+@article{mccaulHowToWin2021,
+  title={{How to win friends and influence functionals: deducing stochasticity from deterministic dynamics}},
+  author={McCaul, Gerard and Bondar, Denys I.},
+  journal={{The European Physical Journal Special Topics}},
+  volume={230},
+  number={4},
+  pages={733--754},
+  year={2021},
+  publisher={Springer}
+}
+@article{stockburgerVarianceReduction2016,
+  title={Variance reduction for stochastic Liouville-von Neumann simulations},
+  author={Stockburger, J{\"u}rgen T.},
+  journal={Chem. Phys.},
+  volume={481},
+  pages={198--202},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{stockburgerStochasticLiouvillevon2018,
+  title={Stochastic Liouville-von Neumann simulations with hybrid propagation schemes},
+  author={Stockburger, J{\"u}rgen T. and Ankerhold, Joachim},
+  journal={Phys. Scr.},
+  volume={93},
+  pages={094002},
+  year={2018},
+  publisher={IOP}
+}
