--- a/manuscript/tex/main.tex
+++ b/manuscript/tex/main.tex
@@ -5,6 +5,8 @@
 \usepackage{amssymb}
 \usepackage{hyperref}
 
+\newcommand{\Tr}{\mathrm{Tr}}
+
 \begin{document}
 
 \title{Hamiltonian of Mean Force: Exact Influence Functional and Operator Locality Criterion}
@@ -19,8 +21,8 @@ Abstract goes here.
 \maketitle
 
 \input{sections/01_introduction_v3}
-\input{sections/02_derivation}
-\input{sections/03_methods}
+\input{sections/02_model}
+\input{sections/03_influence_functional_v2}
 \input{sections/04_results}
 \input{sections/05_discussion}
 
