--- a/manuscript/tex/sections/01_introduction.tex
+++ b/manuscript/tex/sections/01_introduction.tex
@@ -7,7 +7,7 @@ temperature $\beta$ is
     \bar{\rho}_S(\beta) = \mathrm{Tr}_B \, e^{-\beta H_{\mathrm{tot}}},
     \label{eq:intro_rho_unnorm}
 \end{equation}
-with $H_{\mathrm{tot}} = H_Q + H_B + H_I$ and the trace taken over the bath.
+with $H_{\mathrm{tot}} = H_Q + H_X + H_I$ and the trace taken over the bath.
 The normalized reduced state is
 \begin{equation}
     \rho_S = \frac{\bar{\rho}_S}{\mathrm{Tr}_S \bar{\rho}_S}.
@@ -17,9 +17,9 @@ An equivalent operator definition of the Hamiltonian of mean force (HMF) is
 given by
 \begin{align}
     e^{-\beta H_{\mathrm{MF}}(\beta)}
-    &\propto \frac{\mathrm{Tr}_B e^{-\beta(H_Q+H_B+H_I)}}{Z_B(\beta)},
+    &\propto \frac{\mathrm{Tr}_B e^{-\beta(H_Q+H_X+H_I)}}{Z_B(\beta)},
     \label{eq:intro_hmf_def} \\
-    Z_B(\beta) &= \mathrm{Tr}_B e^{-\beta H_B}.
+    Z_B(\beta) &= \mathrm{Tr}_B e^{-\beta H_X}.
     \nonumber
 \end{align}
 where the proportionality fixes an additive scalar in $H_{\mathrm{MF}}$.
