--- a/manuscript/tex/sections/01_introduction_v3.tex
+++ b/manuscript/tex/sections/01_introduction_v3.tex
@@ -10,7 +10,7 @@ reduced state of the global Gibbs ensemble,
     \label{eq:intro_rho_bar} \\
     e^{-\beta H_{\mathrm{MF}}(\beta)}
     &\propto \frac{\mathrm{Tr}_B e^{-\beta H_{\mathrm{tot}}}}{Z_B(\beta)},
-    \quad Z_B(\beta)=\mathrm{Tr}_B e^{-\beta H_B}.
+    \quad Z_B(\beta)=\mathrm{Tr}_B e^{-\beta H_X}.
     \label{eq:intro_hmf_def}
 \end{align}
 This object is generally not $e^{-\beta H_Q}$ for the bare system Hamiltonian
