Fix overfull equations in closure section

--- a/literature/references_new.bib
+++ b/literature/references_new.bib
@@ -1111,43 +1111,43 @@
   isbn      = {978-981-4374-91-0}
 }
 @article{mccaulPartitionFreeApproach2018,
-  title={Partition-free approach to open quantum systems in harmonic environments: An exact stochastic Liouville equation},
-  author={McCaul, G. L. J. and Lorenz, C. D. and Kantorovich, L.},
-  journal={Phys. Rev. A},
-  volume={97},
-  pages={062122},
-  year={2018},
-  publisher={APS}
+  title     = {Partition-free approach to open quantum systems in harmonic environments: An exact stochastic Liouville equation},
+  author    = {McCaul, G. L. J. and Lorenz, C. D. and Kantorovich, L.},
+  journal   = {Phys. Rev. A},
+  volume    = {97},
+  pages     = {062122},
+  year      = {2018},
+  publisher = {APS}
 }
 
 @article{mccaulHowToWin2021,
-  title={{How to win friends and influence functionals: deducing stochasticity from deterministic dynamics}},
-  author={McCaul, Gerard and Bondar, Denys I.},
-  journal={{The European Physical Journal Special Topics}},
-  volume={230},
-  number={4},
-  pages={733--754},
-  year={2021},
-  publisher={Springer}
+  title     = {{How to win friends and influence functionals: deducing stochasticity from deterministic dynamics}},
+  author    = {McCaul, Gerard and Bondar, Denys I.},
+  journal   = {{The European Physical Journal Special Topics}},
+  volume    = {230},
+  number    = {4},
+  pages     = {733--754},
+  year      = {2021},
+  publisher = {Springer}
 }
 @article{stockburgerVarianceReduction2016,
-  title={Variance reduction for stochastic Liouville-von Neumann simulations},
-  author={Stockburger, J{\"u}rgen T.},
-  journal={Chem. Phys.},
-  volume={481},
-  pages={198--202},
-  year={2016},
-  publisher={Elsevier}
+  title     = {Variance reduction for stochastic Liouville-von Neumann simulations},
+  author    = {Stockburger, J{\"u}rgen T.},
+  journal   = {Chem. Phys.},
+  volume    = {481},
+  pages     = {198--202},
+  year      = {2016},
+  publisher = {Elsevier}
 }
 
 @article{stockburgerStochasticLiouvillevon2018,
-  title={Stochastic Liouville-von Neumann simulations with hybrid propagation schemes},
-  author={Stockburger, J{\"u}rgen T. and Ankerhold, Joachim},
-  journal={Phys. Scr.},
-  volume={93},
-  pages={094002},
-  year={2018},
-  publisher={IOP}
+  title     = {Stochastic Liouville-von Neumann simulations with hybrid propagation schemes},
+  author    = {Stockburger, J{\"u}rgen T. and Ankerhold, Joachim},
+  journal   = {Phys. Scr.},
+  volume    = {93},
+  pages     = {094002},
+  year      = {2018},
+  publisher = {IOP}
 }
 
 @article{mccaulMeanForceHamiltoniansInfluence2026,
@@ -1184,3 +1184,42 @@
   publisher = {Elsevier},
   doi       = {10.1016/j.aop.2010.09.012}
 }
+
+@article{huQuantumBrownianMotion1992,
+  title   = {Quantum {{Brownian}} Motion in a General Environment: {{Exact}} Master Equation with Nonlocal Dissipation and Colored Noise},
+  author  = {Hu, B. L. and Paz, J. P. and Zhang, Y.},
+  journal = {Physical Review D},
+  volume  = {45},
+  number  = {8},
+  pages   = {2843--2861},
+  year    = {1992},
+  doi     = {10.1103/PhysRevD.45.2843}
+}
+
+
+
+@article{Kubo1962,
+  title   = {Generalized Cumulant Expansion Method},
+  author  = {Kubo, R.},
+  journal = {Journal of the Physical Society of Japan},
+  volume  = {17},
+  pages   = {1100--1120},
+  year    = {1962},
+  doi     = {10.1143/JPSJ.17.1100}
+}
+
+@book{BreuerMaPetruccione2002,
+  title     = {The Theory of Open Quantum Systems},
+  author    = {Breuer, Heinz-Peter and Petruccione, Francesco},
+  publisher = {Oxford University Press},
+  year      = {2002}
+}
+
+@book{DasThermalFieldTheory,
+  title     = {Finite Temperature Field Theory},
+  author    = {Das, Ashok},
+  publisher = {World Scientific},
+  year      = {1997}
+}
+
+
