Fix overfull equations and enable auto-compile

--- a/manuscript/tex/sections/03c_closure_v3.tex
+++ b/manuscript/tex/sections/03c_closure_v3.tex
@@ -13,11 +13,8 @@ where $\tilde f(\tau)\equiv e^{\tau H_Q} f e^{-\tau H_Q}$.
 Because the noise is classical Gaussian with zero mean, the average of the
 time-ordered exponential resums exactly in terms of the second cumulant,
 \begin{equation}
-    \begin{split}
-        \bar W(\beta) & \equiv \langle W_\xi(\beta)\rangle_\xi                                                      \\
-                      & =\mathcal T_\tau \exp\bigg[\frac12\int_0^\beta d\tau\int_0^\beta d\tau'                     \\
-                      & \quad \times K(\tau-\tau')\,\mathcal T_\tau\!\big(\tilde f(\tau)\tilde f(\tau')\big)\bigg].
-    \end{split}
+    \bar W(\beta) \equiv \langle W_\xi(\beta)\rangle_\xi =
+    \exp\bigg[\frac12\int_0^\beta d\tau\int_0^\beta d\tau'\,K(\tau-\tau')\,\mathcal T_\tau\!\big(\tilde f(\tau)\tilde f(\tau')\big)\bigg].
     \label{eq:Wbar_cumulant_T}
 \end{equation}
 For two operators,
