Update manuscript and simulation scripts

--- a/manuscript/tex/main_v2.tex
+++ b/manuscript/tex/main_v2.tex
@@ -7,6 +7,7 @@
 \usepackage{bm}
 
 \newcommand{\Tr}{\mathrm{Tr}}
+\renewcommand{\vec}[1]{\boldsymbol{#1}}
 
 \begin{document}
 
@@ -38,15 +39,15 @@ the non-Gaussian extension program.
 \input{sections/03_influence_functional_v3}
 \input{sections/03b_hmf_v3}
 \input{sections/03c_closure_v3}
-\input{sections/04_results_v3}
+\input{sections/04_results_v4}
 % \input{sections/05_designability_alltoall_v2}
-\input{sections/05_numerical_validation_v2}
+% \input{sections/05_numerical_validation_v2}
 \input{sections/05_discussion_v2}
 
 \appendix
 \setcounter{secnumdepth}{2}
 %\input{sections/06_appendix_v2}
-\input{sections/07_appendix_universal_v1}
+% \input{sections/07_appendix_universal_v1}
 
 \bibliography{../../literature/references_new}
 
