--- a/manuscript/tex/sections/03b_hmf_v3.tex
+++ b/manuscript/tex/sections/03b_hmf_v3.tex
@@ -38,6 +38,7 @@ A key property of this kernel is its integrated strength. Integrating Eq.~\eqref
     &= \frac{1}{\pi}\int_0^\infty \!\!d\omega\,J(\omega) \int_0^\beta d\tau\, \frac{\cosh\!\big(\omega(\beta/2-|\tau|)\big)}{\sinh(\beta\omega/2)} \nonumber\\
     &= \frac{1}{\pi}\int_0^\infty \!\!d\omega\,J(\omega)\,\frac{2}{\omega} \nonumber\\
     &= 2\lambda,
+    \label{eq:int_K_2lambda}
 \end{align}
 where $\lambda$ is the explicit reorganisation energy. Consequently, the total variance of the integrated noise field $\Xi = \int_0^\beta d\tau\,\xi(\tau)$ grows linearly with inverse temperature:
 \begin{equation}
