--- a/manuscript/tex/sections/05_discussion.tex
+++ b/manuscript/tex/sections/05_discussion.tex
@@ -1,41 +1,5 @@
 \section{Discussion}
 \label{sec:discussion}
 
-This manuscript is positioned as the direct sequel to
-Ref.~\cite{mccaulMeanForceHamiltoniansInfluence2026}. The earlier paper
-established the exact commuting Gaussian benchmark; the present one isolates the
-operator-algebraic obstruction that appears once $[H_Q,f]\neq 0$.
-
-We have derived an exact operator reformulation of the reduced equilibrium
-object for a Gaussian bath, expressed both as a bilocal imaginary-time
-influence functional and as a quenched Gaussian-field average. The nonlocal
-structure in imaginary time is traced entirely to noncommutativity between
-$H_Q$ and the coupling operator $f$, which forces the interaction-picture
-operator $\tilde{f}(\tau)$ to appear in time-ordered products. By expanding
-$\tilde{f}(\tau)$ in adjoint actions and isolating kernel moments, we obtained a
-purely algebraic representation that yields an exact closure criterion for
-locality of $H_{\mathrm{MF}}$.
-
-When the adjoint-generated operator algebra closes, the mean-force Hamiltonian
-is a finite operator polynomial and can be constructed via Magnus/BCH. When it
-does not, any local representation necessarily involves truncation or
-projection; no other approximation is introduced. Broader implications of these
-results are deferred to the next stage of the programme: non-Gaussian cumulant
-extensions and noncommuting finite-bath benchmarks.
-
-The new designability section (Sec.~\ref{sec:alltoall_designability}) makes the
-main constructive consequence explicit for a free-spin core: with a complete
-pair-resolved channel basis, finite-$N$ all-to-all 2-local coefficient maps are
-full rank and directly invertible. The numerical component there separates two
-roles: (i) reconstruction/rank diagnostics for the full all-to-all basis, and
-(ii) stochastic free-model benchmarking in a dense $ZZ$ sector, where
-reweighting remains controlled enough to compare against exact thermal ED while
-also exposing scaling against an MPO/DMRG baseline.
-
-The retained qubit benchmark (Sec.~\ref{sec:numerical_validation}) continues to
-serve a different purpose: continuity with the weak/ultrastrong asymptotics of
-Ref.~\cite{cresserWeakUltrastrongCoupling2021a}. Together, the two numerical
-sections split validation into ``known asymptotic physics recovery'' (qubit) and
-``constructive many-body designability from free trajectories'' (all-to-all
-construction).
+TBC 
 
