--- a/manuscript/tex/sections/05_discussion_v2.tex
+++ b/manuscript/tex/sections/05_discussion_v2.tex
@@ -1,6 +1,6 @@
 \section{Discussion}
 \label{sec:discussion}
-
+UNDER CONSTRUCTION 
 This manuscript is positioned as the direct sequel to
 Ref.~\cite{mccaulMeanForceHamiltoniansInfluence2026}. The earlier paper
 established the exact commuting Gaussian benchmark; the present one isolates the
@@ -22,22 +22,6 @@ does not, any local representation necessarily involves truncation or
 projection; no other approximation is introduced. Broader implications of these
 results are deferred to the next stage of the programme: non-Gaussian cumulant
 extensions and noncommuting finite-bath benchmarks.
-
-The new designability section (Sec.~\ref{sec:alltoall_designability}) makes the
-main constructive consequence explicit for a free-spin core: with a complete
-pair-resolved channel basis, finite-$N$ all-to-all 2-local coefficient maps are
-full rank and directly invertible. The numerical component there separates two
-roles: (i) reconstruction/rank diagnostics for the full all-to-all basis, and
-(ii) stochastic free-model benchmarking in a dense $ZZ$ sector, where
-reweighting remains controlled enough to compare against exact thermal ED while
-also exposing scaling against an MPO/DMRG baseline.
-
-The retained qubit benchmark (Sec.~\ref{sec:numerical_validation}) continues to
-serve a different purpose: continuity with the weak/ultrastrong asymptotics of
-Ref.~\cite{cresserWeakUltrastrongCoupling2021a}. Together, the two numerical
-sections split validation into ``known asymptotic physics recovery'' (qubit) and
-``constructive many-body designability from free trajectories'' (all-to-all
-construction).
 
 Beyond this, the present formulation makes  an informational interpretation of $H_{\mathrm{MF}}$ unavoidable. From this perspective, the logarithm acts as a \emph{compression map}. The
 quenched operator $\bar{\rho}_Q(\beta)=\mathbb E_\xi[U_\xi(\beta)]$ is a mixture over history-conditioned propagators, whereas $\tilde H_{\mathrm{MF}}(\beta)=-(1/\beta)\log\bar{\rho}_Q(\beta)$ is the unique local object whose Gibbs form reproduces that mixture. The gap between ``log of average'' and ``average
